# elasticsearch-quest

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
docs/: LOADMAP.md  PLAN.md  Presentation.html  Presentation_business.html  devel_memo.md
fixtures/: create_quests_table.sql  insert_quests.sql  sample_books.json  sample_books_dump.json  sample_books_mapping.json  test_query_quest_6.json
mcp/elasticsearch-mcp-server/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cliff.toml  docker-compose-elasticsearch.yml  docker-compose-opensearch.yml  pyproject.toml  smithery.yaml
mcp/elasticsearch-mcp-server/mcp_client/python-sdk-anthropic/: client.py  config.py
mcp/elasticsearch-mcp-server/mcp_client/spring-ai/: README.md  build.gradle  settings.gradle
mcp/elasticsearch-mcp-server/mcp_client/spring-ai/src/main/java/spring/ai/mcp/spring_ai_mcp/: Application.java
mcp/elasticsearch-mcp-server/mcp_client/spring-ai/src/main/resources/: application.yml  mcp-servers-config.json
mcp/elasticsearch-mcp-server/mcp_client/spring-ai/src/test/java/spring/ai/mcp/spring_ai_mcp/: SpringAiMcpApplicationTests.java
mcp/elasticsearch-mcp-server/src/: __init__.py  server.py
mcp/elasticsearch-mcp-server/src/clients/: __init__.py  base.py  exceptions.py
mcp/elasticsearch-mcp-server/src/clients/common/: __init__.py  alias.py  client.py  cluster.py  document.py  general.py  index.py
mcp/elasticsearch-mcp-server/src/tools/: __init__.py  alias.py  cluster.py  document.py  general.py  index.py  register.py
src/: cli.py  (+15 more)
(+37 files in other folders)
