[project]
name = "elasticsearch-quest"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.25.0",
    "openai-agents>=0.0.9",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E402"]
